  Armitage's YAML parser can't deal with.
- Armitage's intercept of the shell command now intercepts shell when 
  arguments are present too. This prevents meterp sessions from getting 
  messed up.
- Logging now deals with IPv6 addresses better for Windows users
- Launching psexec at 4+ hosts will no longer open a tab for each host

Cortana Updates (for scripters)
--------
- Added &script_load to load a script (as if the user did this)
- Added &script_unload to unload a script
  
27 Feb 14 (tested against msf git revision: 72da8299a5)
---------
- Armitage console is now a mouse hot spot. Right-click a host in the
  console to see its menu. Click a module to open the module's launcher
- Armitage module launch console ignores false meterpreter prompt from
  msfrpcd after a successful exploit job is run.
- hashdump and wdigest menus now add usernames with spaces to database
  thanks to Steve Pinkham for reporting this issue *with* a fix.
- Added [host] -> Login -> psexec (psh) to use psexec_psh to authenticate
  to a host.
- Armitage.app for MacOS X now works with Oracle's Java 1.7
- Long awaited! I've added a feature to change LHOST in Armitage. Go to
  Armitage -> Listeners -> Set LHOST.
- IPv6 reverse sessions now associate with their host properly.
- Windows open with Ctrl+W now show the Armitage icon
- Armitage now uses a JFrame to display its dialogs. This will give each
  window its own button in the taskbar regardless of window manager.

21 Nov 13 (tested against msf git revision: 597eb56dcf)
---------
- Fixed webcam selection logic that I broke last update. Go me!
- Added a helper for PATH option
- Java 1.6 is no longer a supported environment to run Armitage. Added
  a warning message to indicate as much. You should update to Java 1.7
- Connect dialog now masks the password field.
- Armitage no longer allows you to start msfrpcd on Windows. It shows an
  error stating that you need to connect to a team server on Linux.